# ChangeLog for media-gfx/xv
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/xv/ChangeLog,v 1.97 2008/06/07 19:53:02 lavajoe Exp $

  07 Jun 2008; Joe Peterson <lavajoe@gentoo.org> -xv-3.10a-r14.ebuild:
  Remove old

  07 Jun 2008; Raúl Porcel <armin76@gentoo.org> xv-3.10a-r15.ebuild:
  alpha/ia64/sparc stable wrt #225085

  07 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> xv-3.10a-r15.ebuild:
  amd64 stable, bug #225085

  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> xv-3.10a-r15.ebuild:
  Stable for HPPA (bug #225085).

  07 Jun 2008; nixnut <nixnut@gentoo.org> xv-3.10a-r15.ebuild:
  Stable on ppc wrt bug 225085

  06 Jun 2008; Christian Faulhammer <opfer@gentoo.org> xv-3.10a-r15.ebuild:
  stable x86, bug 225085

  06 Jun 2008; Markus Rothe <corsair@gentoo.org> xv-3.10a-r15.ebuild:
  Stable on ppc64; bug #225085

*xv-3.10a-r15 (06 May 2008)

  06 May 2008; Joe Peterson <lavajoe@gentoo.org>
  +files/xv-3.10a-fix-wait-20070520.patch, +xv-3.10a-r15.ebuild:
  Fix -wait option (bug #149270)

  09 Nov 2007; Fabian Groffen <grobian@gentoo.org> xv-3.10a-r12.ebuild,
  xv-3.10a-r14.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  14 Oct 2007; Markus Rothe <corsair@gentoo.org> xv-3.10a-r14.ebuild:
  Stable on ppc64; bug #194381

  03 Oct 2007; Christoph Mende <angelos@gentoo.org> xv-3.10a-r14.ebuild:
  Stable on amd64 wrt bug #194381

  02 Oct 2007; Lars Weiler <pylon@gentoo.org> xv-3.10a-r14.ebuild:
  stable ppc, bug #194381

  02 Oct 2007; Jeroen Roovers <jer@gentoo.org> xv-3.10a-r14.ebuild:
  Stable for HPPA (bug #194381).

  01 Oct 2007; Raúl Porcel <armin76@gentoo.org> xv-3.10a-r14.ebuild:
  alpha/ia64/sparc/x86 stable wrt #194381

*xv-3.10a-r14 (08 Aug 2007)

  08 Aug 2007; Joe Peterson <lavajoe@gentoo.org> -xv-3.10a-r13.ebuild,
  +xv-3.10a-r14.ebuild:
  Fix doc path not to use /usr/local (bug #188034)

*xv-3.10a-r13 (04 Aug 2007)

  04 Aug 2007; Joe Peterson <lavajoe@gentoo.org>