@@ -1,13 +1,13 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xv/xv-3.10a-r15.ebuild,v 1.8 2008/06/07 19:45:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xv/xv-3.10a-r15.ebuild,v 1.9 2008/06/16 15:21:30 lavajoe Exp $
 
 EAPI="prefix"
 
-inherit flag-o-matic eutils toolchain-funcs
+inherit eutils flag-o-matic
 
 JUMBOV=20070520
-DESCRIPTION="An interactive image manipulation program for X, supporting a wide variety of image formats"
+DESCRIPTION="An interactive image manipulation program that supports a wide variety of image formats"
 HOMEPAGE="http://www.trilon.com/xv/index.html http://www.sonic.net/~roelofs/greg_xv.html"
 SRC_URI="mirror://sourceforge/png-mng/${P}-jumbo-patches-${JUMBOV}.tar.gz ftp://ftp.cis.upenn.edu/pub/xv/${P}.tar.gz"
 
@@ -20,7 +20,6 @@ DEPEND="x11-libs/libXt
 	jpeg? ( >=media-libs/jpeg-6b )
 	tiff? ( >=media-libs/tiff-3.6.1-r2 )
 	png? ( >=media-libs/libpng-1.2 >=sys-libs/zlib-1.1.4 )"
-RDEPEND=${DEPEND}
 
 src_unpack() {
 	unpack ${A}
@@ -41,56 +40,50 @@ src_unpack() {
 	# Fix -wait option (do not rely on obsolete CLK_TCK)
 	epatch "${FILESDIR}/${P}"-fix-wait-${JUMBOV}.patch
 
-	sed -i	-e 's/\(^JPEG.*\)/#\1/g' \
-			-e 's/\(^PNG.*\)/#\1/g' \
-			-e 's/\(^TIFF.*\)/#\1/g' \
-			-e 's/\(^LIBS = .*\)/\1 $(LDFLAGS) /g' Makefile
+	# Use LDFLAGS on link lines
+	epatch "${FILESDIR}/${P}"-add-ldflags-${JUMBOV}.patch
+
+	# Link with various image libraries depending on use flags
+	IMAGE_LIBS=""
+	use jpeg && IMAGE_LIBS="${IMAGE_LIBS} -ljpeg"
+	use png && IMAGE_LIBS="${IMAGE_LIBS} -lz -lpng"
+	use tiff && IMAGE_LIBS="${IMAGE_LIBS} -ltiff"
+
+	sed -i \
+		-e 's/\(^JPEG.*\)/#\1/g' \
+		-e 's/\(^PNG.*\)/#\1/g' \
+		-e 's/\(^TIFF.*\)/#\1/g' \
+		-e "s/\(^LIBS = .*\)/\1${IMAGE_LIBS}/g" Makefile
 
 	# /usr/bin/gzip => /bin/gzip
-	sed -i	-e 's#/usr\(/bin/gzip\)#'"${EPREFIX}"'\1#g' config.h
+	sed -i -e 's#/usr\(/bin/gzip\)#'"${EPREFIX}"'\1#g' config.h
 
-	# fix installation of ps docs.
+	# Fix installation of ps docs
 	sed -i -e 's#$(DESTDIR)$(LIBDIR)#$(LIBDIR)#g' Makefile
 }
 
 src_compile() {
 	append-flags -DUSE_GETCWD -DLINUX -DUSLEEP
+	use jpeg && append-flags -DDOJPEG
+	use png && append-flags -DDOPNG
+	use tiff && append-flags -DDOTIFF -DUSE_TILED_TIFF_BOTLEFT_FIX
 
-	einfo "Enabling Optional Features..."
-	if use jpeg; then
-		ebegin "	jpeg"
-			append-flags -DDOJPEG
-			append-ldflags -ljpeg
-		eend
-	fi
-	if use png; then
-		ebegin "	png"
-			append-flags -DDOPNG
-			append-ldflags -lz -lpng
-		eend
-	fi
-	if use tiff; then
-		ebegin "	tiff"
-			append-flags -DDOTIFF -DUSE_TILED_TIFF_BOTLEFT_FIX
-			append-ldflags -ltiff
-		eend
-	fi
-	einfo "done."
-
-	emake	CC="$(tc-getCC)" CCOPTS="${CFLAGS}" LDFLAGS="${LDFLAGS}" \
-			PREFIX="${EPREFIX}"/usr \
-			DOCDIR="${EPREFIX}/usr/share/doc/${PF}" \
-			LIBDIR="${T}" || die
+	emake \
+		CC="$(tc-getCC)" CCOPTS="${CFLAGS}" LDFLAGS="${LDFLAGS}" \
+		PREFIX="${EPREFIX}"/usr \
+		DOCDIR="${EPREFIX}/usr/share/doc/${PF}" \
+		LIBDIR="${T}" || die
 }
 
 src_install() {
 	dodir /usr/bin
 	dodir /usr/share/man/man1
 
-	emake	DESTDIR="${D}" \
-			PREFIX="${EPREFIX}"/usr \
-			DOCDIR="${EPREFIX}/usr/share/doc/${PF}" \
-			LIBDIR="${T}" install || die
+	emake \
+		DESTDIR="${D}" \
+		PREFIX="${EPREFIX}"/usr \
+		DOCDIR="${EPREFIX}/usr/share/doc/${PF}" \
+		LIBDIR="${T}" install || die
 
 	dodoc CHANGELOG BUGS IDEAS
 }
