@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/xv
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xv/ChangeLog,v 1.97 2008/06/07 19:53:02 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xv/ChangeLog,v 1.98 2008/06/16 15:21:30 lavajoe Exp $
+
+  16 Jun 2008; Joe Peterson <lavajoe@gentoo.org>
+  +files/xv-3.10a-add-ldflags-20070520.patch, xv-3.10a-r15.ebuild:
+  Fix linking (bug #226897) - no rev bump
 
   07 Jun 2008; Joe Peterson <lavajoe@gentoo.org> -xv-3.10a-r14.ebuild:
   Remove old
